--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.3",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
+        "lorisleiva/laravel-actions": "^2.8",
         "tuytoosh/active": "^1.8"
     },
     "require-dev": {
@@ -17,7 +18,10 @@
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.0",
         "pestphp/pest": "^2.34",
-        "pestphp/pest-plugin-laravel": "^2.4"
+        "pestphp/pest-plugin-faker": "^2.0",
+        "pestphp/pest-plugin-laravel": "^2.4",
+        "pestphp/pest-plugin-type-coverage": "^2.8",
+        "roave/security-advisories": "dev-latest"
     },
     "autoload": {
         "psr-4": {
