--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
         "lorisleiva/laravel-actions": "^2.8",
+        "spatie/laravel-medialibrary": "^11.7",
         "tuytoosh/active": "^1.8"
     },
     "require-dev": {
