--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.3",
         "laravel/fortify": "^1.21",
         "laravel/framework": "^11.9",
+        "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
         "lorisleiva/laravel-actions": "^2.8",
         "spatie/laravel-medialibrary": "^11.7",
