--- a/composer.json
+++ b/composer.json
@@ -54,6 +54,7 @@
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi",
             "@php -r \"file_exists('database/database.sqlite') || touch('database/database.sqlite');\"",
+            "@php -r \"file_exists('database/database.testing.sqlite') || touch('database/database.testing.sqlite');\"",
             "@php artisan migrate --graceful --ansi"
         ]
     },
